--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,4 +6,6 @@
 @include foundation-everything;
 
 // Components
-@import "components/addtodo"
+@import "components/addtodo";
+@import "components/page-title";
+@import "components/container";
